--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <spring-security-oauth.version>2.1.2.RELEASE</spring-security-oauth.version>
         <spring-boot-admin.version>2.1.6</spring-boot-admin.version>
         <mybatis-plus.version>3.2.0</mybatis-plus.version>
+        <druid.version>1.1.20</druid.version>
         <hutool.version>4.5.10</hutool.version>
         <guava.version>28.0-jre</guava.version>
         <velocity.version>1.7</velocity.version>
@@ -87,6 +88,11 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>${druid.version}</version>
             </dependency>
             <dependency>
                 <groupId>cn.hutool</groupId>
