--- a/ratel-authorization/ratel-authorization-oauth2-authserver/pom.xml
+++ b/ratel-authorization/ratel-authorization-oauth2-authserver/pom.xml
@@ -9,39 +9,45 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
-
     <artifactId>ratel-authorization-oauth2-authserver</artifactId>
-
 
     <!-- 服务发现-->
     <dependencies>
+
+        <!--公共核心包-->
         <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <groupId>org.ratelframework</groupId>
+            <artifactId>ratel-common-core</artifactId>
+            <version>${project.parent.version}</version>
         </dependency>
 
+        <!--用户权限管理的接口-->
         <dependency>
             <groupId>org.ratelframework</groupId>
             <artifactId>ratel-upms-api</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
 
-        <!--号称世界上最快的连接池-->
         <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
             <exclusions>
-                <!-- 排除 tomcat-jdbc 以使用 HikariCP -->
+                <!-- 排除 tomcat-jdbc 以使用 Druid -->
                 <exclusion>
                     <groupId>org.apache.tomcat</groupId>
                     <artifactId>tomcat-jdbc</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
