--- a/ratel-authorization/ratel-authorization-oauth2-authserver/src/main/resources/application.yml.sample
+++ b/ratel-authorization/ratel-authorization-oauth2-authserver/src/main/resources/application.yml.sample
@@ -9,7 +9,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 120.78.190.213:8848
+        server-addr: localhost:8848
         namespace: c0797ecb-301e-4137-84b7-7f14964712df
   profiles:
     active: dev
@@ -18,7 +18,7 @@ spring:
       name: ratel
       password: 123456
   redis:
-    host: 120.78.190.213
+    host: localhost
     password: 123456
     port: 6379
   datasource:
