--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <spring-security-oauth.version>2.1.2.RELEASE</spring-security-oauth.version>
         <spring-boot-admin.version>2.1.6</spring-boot-admin.version>
         <mybatis-plus.version>3.2.0</mybatis-plus.version>
+        <mybatis.version>2.0.1</mybatis.version>
         <druid.version>1.1.20</druid.version>
         <hutool.version>4.5.10</hutool.version>
         <guava.version>28.0-jre</guava.version>
@@ -83,6 +84,11 @@
                 <groupId>org.springframework.security.oauth.boot</groupId>
                 <artifactId>spring-security-oauth2-autoconfigure</artifactId>
                 <version>${spring-security-oauth.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
