--- a/ratel-samples/order-service/pom.xml
+++ b/ratel-samples/order-service/pom.xml
@@ -13,9 +13,16 @@
 
     <dependencies>
 
+        <!--公共核心包-->
         <dependency>
             <groupId>org.ratelframework</groupId>
             <artifactId>ratel-common-core</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <!--多数据源支持-->
+        <dependency>
+            <groupId>org.ratelframework</groupId>
+            <artifactId>ratel-common-datasource</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
 
@@ -60,6 +67,16 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
         <dependency>
