--- a/ratel-samples/order-service/src/main/resources/application.yml.sample
+++ b/ratel-samples/order-service/src/main/resources/application.yml.sample
@@ -1,22 +1,37 @@
-server:
-  port: 0
-  servlet:
-    context-path: /order
-
-spring:
-  application:
-    name: order-service
-  cloud:
-    nacos:
-      discovery:
-        server-addr: localhost:8848
-        namespace: c0797ecb-301e-4137-84b7-7f14964712df
-  profiles:
-    active: dev
-  boot:
-    admin:
-      client:
-        url: localhost:8080
+ratel:
+  datasource:
+    primary:
+      config:
+        url: jdbc:mysql://localhost:3306/ratel?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
+        username: root
+        password: cdslyk912
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        min-idle: 5
+        max-active: 10
+        initial-size: 5
+        validation-query: SELECT 1
+        max-wait: 60000
+        time-between-eviction-runs-millis: 60000
+        min-evictable-idle-time-millis: 300000
+        max-pool-prepared-statement-per-connection-size: 20
+      enable-jdbc-template: true
+      enable-sql-session-template: true
+    sub:
+      config:
+        url: jdbc:mysql://localhost:3307/mysql_db1?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
+        username: root
+        password: 123456
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        min-idle: 5
+        max-active: 10
+        initial-size: 5
+        validation-query: SELECT 1
+        max-wait: 60000
+        time-between-eviction-runs-millis: 60000
+        min-evictable-idle-time-millis: 300000
+        max-pool-prepared-statement-per-connection-size: 20
+      enable-jdbc-template: true
+      enable-sql-session-template: true
 management:
   endpoints:
     web:
@@ -28,4 +43,5 @@ management:
       show-details: always
     info:
       enabled: true
-
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
