--- a/ratel-system/ratel-monitor/src/main/resources/bootstrap.yml.sample
+++ b/ratel-system/ratel-monitor/src/main/resources/bootstrap.yml.sample
@@ -1,6 +1,8 @@
+server:
+  port: 8085
 spring:
   application:
-    name: RATEL-MONITOR
+    name: ratel-monitor
   cloud:
     nacos:
       discovery:
