--- a/ratel-system/ratel-monitor/pom.xml
+++ b/ratel-system/ratel-monitor/pom.xml
@@ -8,9 +8,8 @@
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>ratel-monitor</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>Maven Portlet Archetype</name>
 
@@ -33,18 +32,19 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
         <!--undertow容器-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-undertow</artifactId>
-        </dependency>
-
+        <!--admin server监控服务器-->
         <dependency>
             <groupId>de.codecentric</groupId>
             <artifactId>spring-boot-admin-starter-server</artifactId>
