--- a/ratel-system/ratel-monitor/src/main/resources/bootstrap.yml.sample
+++ b/ratel-system/ratel-monitor/src/main/resources/bootstrap.yml.sample
@@ -10,6 +10,10 @@ spring:
         namespace: c0797ecb-301e-4137-84b7-7f14964712df
         enabled: true
         register-enabled: true
+  security:
+    user:
+      name: user
+      password: 123456
 management:
   endpoints:
     web:
