add resource code

--- a/ratel-system/ratel-monitor/src/main/resources/bootstrap.yml.sample
+++ b/ratel-system/ratel-monitor/src/main/resources/bootstrap.yml.sample
@@ -22,3 +22,7 @@ management:
   endpoint:
     health:
       show-details: ALWAYS
+info:
+  groupId: @project.groupId@
+  artifactId: @project.artifactId@
+  version: @project.version@
