--- a/ratel-system/ratel-monitor/pom.xml
+++ b/ratel-system/ratel-monitor/pom.xml
@@ -13,6 +13,15 @@
     <name>ratel-monitor</name>
 
     <dependencies>
+
+        <!--核心公共包-->
+        <dependency>
+            <groupId>org.ratelframework</groupId>
+            <artifactId>ratel-common-core</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+
+        <!--服务注册和发现-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
@@ -82,4 +91,6 @@
             </resource>
         </resources>
     </build>
+
+
 </project>
