--- a/ratel-system/ratel-monitor/src/main/resources/bootstrap.yml.sample
+++ b/ratel-system/ratel-monitor/src/main/resources/bootstrap.yml.sample
@@ -14,6 +14,8 @@ spring:
     user:
       name: user
       password: 123456
+  profiles:
+    active: dev
 management:
   endpoints:
     web:
@@ -22,6 +24,7 @@ management:
   endpoint:
     health:
       show-details: ALWAYS
+
 info:
   groupId: @project.groupId@
   artifactId: @project.artifactId@
