--- a/ratel-authorization/ratel-authorization-oauth2-resource-server/src/main/resources/application.yml.sample
+++ b/ratel-authorization/ratel-authorization-oauth2-resource-server/src/main/resources/application.yml.sample
@@ -13,10 +13,10 @@ spring:
         namespace: c0797ecb-301e-4137-84b7-7f14964712df
   profiles:
     active: dev
-  boot:
-    admin:
-      client:
-        url: localhost:8080
+  redis:
+      host: localhost
+      password: 123456
+      port: 6379
 security:
   oauth2:
     resource:
