--- a/ratel-authorization/ratel-authorization-oauth2-resource-server/pom.xml
+++ b/ratel-authorization/ratel-authorization-oauth2-resource-server/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>org.ratelframework</groupId>
             <artifactId>ratel-common-core</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
