--- a/ratel-samples/product-service/pom.xml
+++ b/ratel-samples/product-service/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>org.ratelframework</groupId>
             <artifactId>ratel-common-core</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
