--- a/ratel-starter/logger-ratel-boot-starter/pom.xml
+++ b/ratel-starter/logger-ratel-boot-starter/pom.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>ratel-common</artifactId>
+        <artifactId>ratel-starter</artifactId>
         <groupId>org.ratelframework</groupId>
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>ratel-common-log</artifactId>
+    <artifactId>logger-ratel-boot-starter</artifactId>
+    <name>logger-ratel-boot-starter</name>
 
 
     <dependencies>
@@ -43,7 +43,5 @@
             <groupId>org.springframework.security.oauth.boot</groupId>
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
         </dependency>
-
     </dependencies>
-
 </project>
