--- a/ratel-system/ratel-monitor/pom.xml
+++ b/ratel-system/ratel-monitor/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.ratelframework</groupId>
             <artifactId>ratel-common-core</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <!--服务注册和发现-->
