--- a/ratel-starter/pom.xml
+++ b/ratel-starter/pom.xml
@@ -8,13 +8,20 @@
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>ratel-starter</artifactId>
     <packaging>pom</packaging>
+
     <modules>
         <module>logger-ratel-boot-starter</module>
         <module>excel-ratel-boot-starter</module>
+        <module>multi-datasource-ratel-boot-starter</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
