--- a/ratel-starter/distributed-lock-ratel-boot-starter/pom.xml
+++ b/ratel-starter/distributed-lock-ratel-boot-starter/pom.xml
@@ -10,7 +10,6 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>distributed-lock-ratel-boot-starter</artifactId>
 
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -28,6 +27,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
+        <!--  主要用于生成自动配置的json文件，用于配置提示 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
