--- a/ratel-gateway/src/main/resources/bootstrap.yml.sample
+++ b/ratel-gateway/src/main/resources/bootstrap.yml.sample
@@ -8,7 +8,7 @@ spring:
       discovery:
         enabled: true
         namespace: c0797ecb-301e-4137-84b7-7f14964712df
-        server-addr: 120.78.190.213:8848
+        server-addr: localhost:8848
         register-enabled: true
     gateway:
       enabled: true
