--- a/ratel-authorization/pom.xml
+++ b/ratel-authorization/pom.xml
@@ -37,10 +37,10 @@
         </dependency>
 
         <!-- redis操作-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-data-redis</artifactId>-->
+<!--        </dependency>-->
 
         <!--oauth2客户端-->
         <dependency>
