Modify upms ode

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
         <spring-cloud-alibaba.version>2.1.0.RELEASE</spring-cloud-alibaba.version>
         <spring-security-oauth.version>2.1.2.RELEASE</spring-security-oauth.version>
+        <spring-security-oauth.version>2.1.2.RELEASE</spring-security-oauth.version>
         <spring-boot-admin.version>2.1.6</spring-boot-admin.version>
         <mybatis-plus.version>3.2.0</mybatis-plus.version>
         <mybatis.version>2.0.1</mybatis.version>
@@ -76,6 +77,13 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <!-- 安全相关依赖 -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-oauth2</artifactId>
+                <version>${spring-security-oauth.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-security</artifactId>
@@ -86,6 +94,8 @@
                 <artifactId>spring-security-oauth2-autoconfigure</artifactId>
                 <version>${spring-security-oauth.version}</version>
             </dependency>
+
+            <!-- 数据库的依赖 -->
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -101,6 +111,8 @@
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid.version}</version>
             </dependency>
+
+            <!--工具类相关依赖-->
             <dependency>
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
