--- a/ratel-authorization/ratel-authorization-oauth2-client/pom.xml
+++ b/ratel-authorization/ratel-authorization-oauth2-client/pom.xml
@@ -8,17 +8,11 @@
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
-    <artifactId>ratel-authorization-oauth2-resource-server</artifactId>
+
+    <artifactId>ratel-authorization-oauth2-client</artifactId>
+
 
     <dependencies>
-        <!--公共核心库-->
-        <dependency>
-            <groupId>org.ratelframework</groupId>
-            <artifactId>ratel-common-core</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
         <!--web模块-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -37,18 +31,26 @@
             <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
 
-        <!-- nacos服务注册发现 -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
 
-        <!--oauth2资源服务器 -->
+        <!--oauth2客户端-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
     </dependencies>
 
 
