Remove auth client

--- a/ratel-authorization/ratel-authorization-oauth2-client/pom.xml
+++ b/ratel-authorization/ratel-authorization-oauth2-client/pom.xml
@@ -13,6 +13,14 @@
 
 
     <dependencies>
+
+        <!--公共核心包-->
+        <dependency>
+            <groupId>org.ratelframework</groupId>
+            <artifactId>ratel-common-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!--web模块-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
