--- a/ratel-authorization/ratel-authorization-oauth2-client/src/main/resources/application.yml.sample
+++ b/ratel-authorization/ratel-authorization-oauth2-client/src/main/resources/application.yml.sample
@@ -1,11 +1,11 @@
 server:
-  port: 8082
+  port: 8084
   servlet:
     context-path: /client
 
 spring:
   application:
-    name: auth-server
+    name: auth-client
   cloud:
     nacos:
       discovery:
