--- a/ratel-authorization/pom.xml
+++ b/ratel-authorization/pom.xml
@@ -14,15 +14,11 @@
     <modules>
         <module>ratel-authorization-oauth2-authserver</module>
         <module>ratel-authorization-oauth2-client</module>
+        <module>ratel-authorization-oauth2-resource-server</module>
     </modules>
 
     <dependencies>
 
-        <!-- redis操作-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-data-redis</artifactId>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
