Finish client server for testing sso

--- a/ratel-authorization/ratel-authorization-oauth2-authserver/src/main/resources/application.yml.sample
+++ b/ratel-authorization/ratel-authorization-oauth2-authserver/src/main/resources/application.yml.sample
@@ -1,11 +1,11 @@
 server:
   port: 8082
   servlet:
-    context-path: /authserver
+    context-path: /sso
 
 spring:
   application:
-    name: auth-server
+    name: sso-server
   cloud:
     nacos:
       discovery:
