--- a/ratel-authorization/ratel-authorization-oauth2-client/src/main/resources/application.yml.sample
+++ b/ratel-authorization/ratel-authorization-oauth2-client/src/main/resources/application.yml.sample
@@ -13,31 +13,25 @@ spring:
         namespace: c0797ecb-301e-4137-84b7-7f14964712df
   profiles:
     active: dev
-  security:
-    user:
-      name: ratel
-      password: 123456
-  redis:
-    host: localhost
-    password: 123456
-    port: 6379
-  datasource:
-    jdbc-url: jdbc:mysql://localhost:3306/ratel?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: cdslyk912
-    druid:
-      min-idle: 5
-      max-active: 10
-      initial-size: 2
-      validation-query: SELECT 1
-      max-wait: 60000
-      time-between-eviction-runs-millis: 60000
-      min-evictable-idle-time-millis: 300000
-      max-pool-prepared-statement-per-connection-size: 20
   main:
     allow-bean-definition-overriding: true
+security:
+  oauth2:
+    client:
+      client-id: client1
+      client-secret: secret
+      grant-type: authorization_code
+      access-token-uri: ${oauth2.sso-server-uri}/oauth/token
+      user-authorization-uri: ${oauth2.sso-server-uri}/oauth/authorize
+      registered-redirect-uri: http://www.baidu.com
+      scope: all
+    resource:
+      token-info-uri: ${oauth2.sso-server-uri}/oauth/check_token
+      prefer-token-info: true
+
+oauth2:
+  sso-server-uri: http://localhost:8082/sso
+
 management:
   endpoints:
     web:
