--- a/ratel-authorization/ratel-authorization-oauth2-authserver/pom.xml
+++ b/ratel-authorization/ratel-authorization-oauth2-authserver/pom.xml
@@ -64,6 +64,12 @@
             <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
 
+        <!--freemarker-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
