--- a/ratel-authorization/ratel-authorization-oauth2-authserver/pom.xml
+++ b/ratel-authorization/ratel-authorization-oauth2-authserver/pom.xml
@@ -72,6 +72,11 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
             <exclusions>
                 <!-- 排除 tomcat-jdbc 以使用 Druid -->
