--- a/ratel-starter/logger-ratel-boot-starter/pom.xml
+++ b/ratel-starter/logger-ratel-boot-starter/pom.xml
@@ -36,12 +36,14 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-security</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.springframework.security.oauth.boot</groupId>
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 </project>
